FEAT: 채팅방 생성, 채팅방 입장 구현

--- a/src/main/resources/templates/roomDetail.html
+++ b/src/main/resources/templates/roomDetail.html
@@ -10,50 +10,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>My Spring WebSocket Chatting</title>
-    <link rel="stylesheet" href="/css/chatroom/main.css"/>
-    <style>
-        #menu{
-            width: 310px;
-        }
-        button#uploadFile {
-            margin-left: 225px;
-            margin-top: -55px;
-        }
-        input {
-            padding-left: 5px;
-            outline: none;
-            width: 250px;
-            margin-top: 15px;
-        }
-        .btn fa fa-download {
-            background-color: DodgerBlue;
-            border: none;
-            color: white;
-            padding: 12px 30px;
-            cursor: pointer;
-            font-size: 20px;
-        }
-
-        .input-group{width:80.5%}
-        .chat-container{position: relative;}
-        .chat-container .btn-group{position:absolute; bottom:-12px; right:-50px; transform: translate(-50%,-50%);}
-    </style>
+    <link rel="stylesheet" href="/css/login/main.css"/>
 </head>
 <body>
 <noscript>
     <h2>Sorry! Your browser doesn't support Javascript</h2>
 </noscript>
 
-
-<div id="username-page">
+<div id="userName-page">
     <div class="username-page-container">
         <h1 class="title">Type your username</h1>
-        <form id="usernameForm" name="usernameForm">
-            <div  th:if="${user == null}" class="form-group">
+        <form id="userNameForm" name="userNameForm">
+            <div class="form-group">
                 <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control"/>
-            </div>
-            <div  th:if="${user != null}" class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" th:value="${user.nickName}"/>
             </div>
             <div class="form-group">
                 <button type="submit" class="accent username-submit">Start Chatting</button>
@@ -63,13 +32,13 @@
 </div>
 
 
-<div id="chat-page" class="hidden">
-    <div class="btn-group dropend">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="showUserListButton" data-toggle="dropdown"
+<div id="chat-page" class="invisible">
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
             참가한 유저
         </button>
-        <div id="list" class="dropdown-menu" aria-labelledby="showUserListButton">
+        <div id="list" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 
         </div>
     </div>
@@ -92,18 +61,6 @@
                 </div>
             </div>
         </form>
-
-        <div class="btn-group dropend">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="showMenu" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                파일 업로드
-            </button>
-            <div id="menu" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <input type="file" id="file">
-                <button type="button" class="btn btn-primary" id="uploadFile" onclick="uploadFile()">저장</button>
-
-            </div>
-        </div>
     </div>
 
 </div>
