--- a/src/main/resources/templates/roomDetail.html
+++ b/src/main/resources/templates/roomDetail.html
@@ -6,14 +6,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
             integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/chatroom/main.css"/>
 
     <title>My Spring WebSocket Chatting</title>
-<!--    <link rel="stylesheet" href="/css/login/main.css"/>-->
 </head>
 <body>
 <noscript>
@@ -41,7 +40,7 @@
                 aria-haspopup="true" aria-expanded="false">
             참가한 유저
         </button>
-        <div id="list" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <div id="userList" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 
         </div>
     </div>
