--- a/src/main/resources/templates/roomLIst.html
+++ b/src/main/resources/templates/roomLIst.html
@@ -6,7 +6,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
             integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +22,7 @@
 
         $(function(){
             let $maxChk = $("#maxChk");
-            let $maxUserCnt = $("#maxUserCnt");
+            let $maxUserCount = $("#maxUserCount");
 
             // 모달창 열릴 때 이벤트 처리 => roomId 가져오기
             $("#enterRoomModal").on("show.bs.modal", function (event) {
@@ -82,15 +81,15 @@
             })
 
             // 기본은 유저 설정 칸 미활성화
-            $maxUserCnt.hide();
+            $maxUserCount.hide();
 
             // 체크박스 체크에 따라 인원 설정칸 활성화 여부
             $maxChk.change(function(){
                 if($maxChk.is(':checked')){
-                    $maxUserCnt.val('');
-                    $maxUserCnt.show();
+                    $maxUserCount.val('');
+                    $maxUserCount.show();
                 }else{
-                    $maxUserCnt.hide();
+                    $maxUserCount.hide();
                 }
             })
 
@@ -103,8 +102,8 @@
             let name = $("#roomName").val();
             let pwd = $("#roomPwd").val();
             let secret = $("#secret").is(':checked');
-            let secretChk = $("#secretChk");
-            let $maxUserCnt = $("#maxUserCnt");
+            let secretRoom = $("#secretRoom");
+            let $maxUserCount = $("#maxUserCount");
 
             // console.log("name : " + name);
             // console.log("pwd : " + pwd);
@@ -123,15 +122,15 @@
             }
 
             // 최소 방 인원 수는 2
-            if($maxUserCnt.val() <= 1){
+            if($maxUserCount.val() <= 1){
                 alert("혼자서는 채팅이 불가능해요ㅠ.ㅠ");
                 return false;
             }
 
             if (secret) {
-                secretChk.attr('value', true);
+                secretRoom.attr('value', true);
             } else {
-                secretChk.attr('value', false);
+                secretRoom.attr('value', false);
             }
 
             return true;
@@ -206,7 +205,7 @@
             margin-top: 40px;
         }
 
-        input#maxUserCnt {
+        input#maxUserCount {
             width: 160px;
         }
 
@@ -245,20 +244,20 @@
 
                 <tr th:each="room : ${roomList}">
                     <span class="hidden" th:id="${room.roomName}"></span>
-                    <td th:if="${room.secretChk}">
+                    <td th:if="${room.secretRoom}">
                         <a href="#enterRoomModal" data-bs-toggle="modal" data-target="#enterRoomModal" th:data-id="${room.roomId}">[[${room.roomName}]]</a>
                     </td>
-                    <td th:if="${!room.secretChk}">
+                    <td th:if="${!room.secretRoom}">
                         <!-- thymeleaf 의 변수를 onclick 에 넣는 방법 -->
                         <a th:href="@{/chat/room(roomId=${room.roomId})}" th:roomId="${room.roomId}" onclick="return chkRoomUserCnt(this.getAttribute('roomId'));">[[${room.roomName}]]</a>
                     </td>
                     <td>
-                        <span th:if="${room.secretChk}">
+                        <span th:if="${room.secretRoom}">
                             🔒︎
                         </span>
                     </td>
                     <td>
-                        <span class="badge bg-primary rounded-pill">[[${room.userCount}]]/[[${room.maxUserCnt}]]</span>
+                        <span class="badge bg-primary rounded-pill">[[${room.userCount}]]/[[${room.maxUserCount}]]</span>
                     </td>
                     <td>
                         <button class="btn btn-primary btn-sm" id="configRoom" data-bs-toggle="modal" data-bs-target="#confirmPwdModal" th:data-id="${room.roomId}">채팅방 설정</button>
@@ -295,13 +294,13 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="maxUserCnt" class="col-form-label">채팅방 인원 설정(미체크 시 기본 100명)
+                        <label for="maxUserCount" class="col-form-label">채팅방 인원 설정(미체크 시 기본 100명)
                             <input class="form-check-input" type="checkbox" id="maxChk"></label>
-                        <input type="text" class="form-control" id="maxUserCnt" name="maxUserCnt" value="100">
+                        <input type="text" class="form-control" id="maxUserCount" name="maxUserCount" value="100">
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="secret">
-                        <input type="hidden" name="secretChk" id="secretChk" value="">
+                        <input type="hidden" name="secretRoom" id="secretRoom" value="">
                         <label class="form-check-label" for="secret">
                             채팅방 잠금
                         </label>
@@ -394,7 +393,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="chSecret">
-                        <input type="hidden" name="secretChk" id="chSecretChk" value="">
+                        <input type="hidden" name="secretRoom" id="chsecretRoom" value="">
                         <label class="form-check-label" for="secret">
                             채팅방 잠금
                         </label>
