--- a/src/main/resources/templates/roomLIst.html
+++ b/src/main/resources/templates/roomLIst.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html lang="ko">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -22,7 +19,7 @@
 
         $(function(){
             let $maxChk = $("#maxChk");
-            let $maxUserCount = $("#maxUserCount");
+            let $maxUserCnt = $("#maxUserCnt");
 
             // 모달창 열릴 때 이벤트 처리 => roomId 가져오기
             $("#enterRoomModal").on("show.bs.modal", function (event) {
@@ -81,15 +78,15 @@
             })
 
             // 기본은 유저 설정 칸 미활성화
-            $maxUserCount.hide();
+            $maxUserCnt.hide();
 
             // 체크박스 체크에 따라 인원 설정칸 활성화 여부
             $maxChk.change(function(){
                 if($maxChk.is(':checked')){
-                    $maxUserCount.val('');
-                    $maxUserCount.show();
+                    $maxUserCnt.val('');
+                    $maxUserCnt.show();
                 }else{
-                    $maxUserCount.hide();
+                    $maxUserCnt.hide();
                 }
             })
 
@@ -102,8 +99,8 @@
             let name = $("#roomName").val();
             let pwd = $("#roomPwd").val();
             let secret = $("#secret").is(':checked');
-            let secretRoom = $("#secretRoom");
-            let $maxUserCount = $("#maxUserCount");
+            let secretChk = $("#secretChk");
+            let $maxUserCnt = $("#maxUserCnt");
 
             // console.log("name : " + name);
             // console.log("pwd : " + pwd);
@@ -122,15 +119,15 @@
             }
 
             // 최소 방 인원 수는 2
-            if($maxUserCount.val() <= 1){
+            if($maxUserCnt.val() <= 1){
                 alert("혼자서는 채팅이 불가능해요ㅠ.ㅠ");
                 return false;
             }
 
             if (secret) {
-                secretRoom.attr('value', true);
+                secretChk.attr('value', true);
             } else {
-                secretRoom.attr('value', false);
+                secretChk.attr('value', false);
             }
 
             return true;
@@ -205,7 +202,7 @@
             margin-top: 40px;
         }
 
-        input#maxUserCount {
+        input#maxUserCnt {
             width: 160px;
         }
 
@@ -244,20 +241,20 @@
 
                 <tr th:each="room : ${roomList}">
                     <span class="hidden" th:id="${room.roomName}"></span>
-                    <td th:if="${room.secretRoom}">
+                    <td th:if="${room.secretChk}">
                         <a href="#enterRoomModal" data-bs-toggle="modal" data-target="#enterRoomModal" th:data-id="${room.roomId}">[[${room.roomName}]]</a>
                     </td>
-                    <td th:if="${!room.secretRoom}">
+                    <td th:if="${!room.secretChk}">
                         <!-- thymeleaf 의 변수를 onclick 에 넣는 방법 -->
                         <a th:href="@{/chat/room(roomId=${room.roomId})}" th:roomId="${room.roomId}" onclick="return chkRoomUserCnt(this.getAttribute('roomId'));">[[${room.roomName}]]</a>
                     </td>
                     <td>
-                        <span th:if="${room.secretRoom}">
+                        <span th:if="${room.secretChk}">
                             🔒︎
                         </span>
                     </td>
                     <td>
-                        <span class="badge bg-primary rounded-pill">[[${room.userCount}]]/[[${room.maxUserCount}]]</span>
+                        <span class="badge bg-primary rounded-pill">[[${room.userCount}]]/[[${room.maxUserCnt}]]</span>
                     </td>
                     <td>
                         <button class="btn btn-primary btn-sm" id="configRoom" data-bs-toggle="modal" data-bs-target="#confirmPwdModal" th:data-id="${room.roomId}">채팅방 설정</button>
@@ -294,13 +291,13 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="maxUserCount" class="col-form-label">채팅방 인원 설정(미체크 시 기본 100명)
+                        <label for="maxUserCnt" class="col-form-label">채팅방 인원 설정(미체크 시 기본 100명)
                             <input class="form-check-input" type="checkbox" id="maxChk"></label>
-                        <input type="text" class="form-control" id="maxUserCount" name="maxUserCount" value="100">
+                        <input type="text" class="form-control" id="maxUserCnt" name="maxUserCnt" value="100">
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="secret">
-                        <input type="hidden" name="secretRoom" id="secretRoom" value="">
+                        <input type="hidden" name="secretChk" id="secretChk" value="">
                         <label class="form-check-label" for="secret">
                             채팅방 잠금
                         </label>
@@ -373,38 +370,38 @@
                 <h5 class="modal-title">채팅방 설정</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="chPwd" class="col-form-label">비밀번호 변경</label>
-                        <div class="input-group">
-                            <input type="password" name="confirmPwd" id="chPwd" class="form-control" data-toggle="password">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fa fa-eye"></i></span>
-                            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="chPwd" class="col-form-label">비밀번호 변경</label>
+                    <div class="input-group">
+                        <input type="password" name="confirmPwd" id="chPwd" class="form-control" data-toggle="password">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="fa fa-eye"></i></span>
                         </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="chRoomName" class="col-form-label">채팅방 이름 변경</label>
-                        <input type="text" class="form-control" id="chRoomName" name="chRoomName">
-                    </div>
-                    <div class="mb-3">
-                        <label for="chRoomUserCnt" class="col-form-label">채팅방 인원 변경</label>
-                        <input type="text" class="form-control" id="chRoomUserCnt" name="chUserCnt">
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="chSecret">
-                        <input type="hidden" name="secretRoom" id="chsecretRoom" value="">
-                        <label class="form-check-label" for="secret">
-                            채팅방 잠금
-                        </label>
-                    </div>
-                    <div class="mb-3">
-                        <button type="button" class="btn btn-primary" onclick="delRoom()">방 삭제</button>
-                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <div class="mb-3">
+                    <label for="chRoomName" class="col-form-label">채팅방 이름 변경</label>
+                    <input type="text" class="form-control" id="chRoomName" name="chRoomName">
                 </div>
+                <div class="mb-3">
+                    <label for="chRoomUserCnt" class="col-form-label">채팅방 인원 변경</label>
+                    <input type="text" class="form-control" id="chRoomUserCnt" name="chUserCnt">
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="chSecret">
+                    <input type="hidden" name="secretChk" id="chSecretChk" value="">
+                    <label class="form-check-label" for="secret">
+                        채팅방 잠금
+                    </label>
+                </div>
+                <div class="mb-3">
+                    <button type="button" class="btn btn-primary" onclick="delRoom()">방 삭제</button>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
