--- a/src/main/resources/templates/roomLIst.html
+++ b/src/main/resources/templates/roomLIst.html
@@ -294,6 +294,7 @@
                         <label for="maxUserCnt" class="col-form-label">채팅방 인원 설정(미체크 시 기본 100명)
                             <input class="form-check-input" type="checkbox" id="maxChk"></label>
                         <input type="text" class="form-control" id="maxUserCnt" name="maxUserCnt" value="100">
+                        <input type="hidden" name="userCount" value="0">
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="secret">
