--- a/src/main/resources/templates/roomLIst.html
+++ b/src/main/resources/templates/roomLIst.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      lang="ko">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -14,6 +16,8 @@
           crossorigin="anonymous">
 
     <script src="/js/roomlist/bootstrap-show-password.min.js"></script>
+
+    <title>Chat For You</title>
 
     <script th:inline="javascript">
         let roomId;
@@ -223,14 +227,16 @@
 
         <h2>채팅방 리스트</h2>
 
-        <div th:if="${user == null}" class="row">
+        <div sec:authorize="isAnonymous()" class="row">
             <div class="col">
-                <a href="/chat/login"><button type="button" class="btn btn-primary">로그인하기</button></a>
+                <a th:href="@{/chat/login}"><button type="button" class="btn btn-primary">로그인하기</button></a>
             </div>
         </div>
-        <h5 th:if="${user != null}">
-            [[${user.nickName}]]
-        </h5>
+        <div sec:authorize="isAuthenticated()" class="row">
+            <div class="col">
+                <a th:href="@{/chat/logout}"><button type="button" class="btn btn-secondary">로그아웃</button></a>
+            </div>
+        </div>
         <table class="table table-hover" id="table">
             <tr>
                 <th scope="col">채팅방명</th>
