--- a/src/main/resources/templates/roomLIst.html
+++ b/src/main/resources/templates/roomLIst.html
@@ -92,6 +92,7 @@
                     $maxUserCnt.show();
                 }else{
                     $maxUserCnt.hide();
+                    $maxUserCnt.val(100);
                 }
             })
 
@@ -107,9 +108,6 @@
             let secretChk = $("#secretChk");
             let $maxUserCnt = $("#maxUserCnt");
 
-            // console.log("name : " + name);
-            // console.log("pwd : " + pwd);
-
             if (roomName === "") {
                 alert("방 이름은 필수입니다")
                 return false;
@@ -124,7 +122,7 @@
             }
 
             // 최소 방 인원 수는 2
-            if($maxUserCnt.val() <= 1){
+            if ($maxUserCnt.val() === null || $maxUserCnt.val() <= 1) {
                 alert("혼자서는 채팅이 불가능해요ㅠ.ㅠ");
                 return false;
             }
@@ -154,9 +152,9 @@
                     // console.log("확인 : "+chkRoomUserCnt(roomId))
 
                     if(result){
-                        // if (chkRoomUserCnt(roomId)) {
-                        // }
-                        location.href = "/chat/room?roomId="+roomId;
+                        if (chkRoomUserCnt(roomId)) {
+                            location.href = "/chat/room?roomId="+roomId;
+                        }
                     }else{
                         alert("비밀번호가 틀립니다. \n 비밀번호를 확인해주세요")
                     }
