--- a/src/main/resources/templates/chatLogin.html
+++ b/src/main/resources/templates/chatLogin.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <title>Chat For You Login</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--===============================================================================================-->
@@ -26,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="/css/login/util.css">
   <link rel="stylesheet" type="text/css" href="/css/login/main.css">
   <!--===============================================================================================-->
+  <title>Chat For You</title>
 </head>
 <body>
 
@@ -38,36 +38,13 @@
 					</span>
 
         <span class="login100-form-title p-b-34 p-t-27">
-						Log in
+						Chat For You
 					</span>
-
-        <div class="wrap-input100 validate-input" data-validate = "Enter username">
-          <input class="input100" type="text" name="username" placeholder="Username">
-          <span class="focus-input100" data-placeholder="&#xf207;"></span>
-        </div>
-
-        <div class="wrap-input100 validate-input" data-validate="Enter password">
-          <input class="input100" type="password" name="pass" placeholder="Password">
-          <span class="focus-input100" data-placeholder="&#xf191;"></span>
-        </div>
-
-        <div class="contact100-form-checkbox">
-          <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-          <label class="label-checkbox100" for="ckb1">
-            Remember me
-          </label>
-        </div>
-
-        <div class="container-login100-form-btn">
-          <button class="login100-form-btn">
-            Login
-          </button>
-        </div>
         <div class="social-login">
           <div>
             <span class="d-block text-left my-4 text-muted"></span>
-            <a href="http://localhost:8090/oauth2/authorization/kakao">
-              <img src="/images/login/kakaotalk.png" width="200" height="auto" alt="" />
+            <a href="http://localhost:8090/oauth2/authorization/google">
+              <img src="/images/login/google.png" width="200" height="auto" alt="" />
             </a>
             <a href="http://localhost:8090/oauth2/authorization/naver">
               <img src="/images/login/naver.png" width="200" height="auto" alt="" />
